--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>Czarni</groupId>
+    <ochodekId>Czarni</ochodekId>
     <artifactId>TextTransformer</artifactId>
-    <version>0.1</version>
+    <version>0.xdddd</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
